5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3161/executions/1616_2943.log
== TEST (2019-04-01 15:07:42) 
-- CODE:
R= int(input("R: "))
r= int(input("r: "))
Q= (int(input("Q: ")))

M=2*("math.pi")*(R*r*2)*(Q)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:04) 
-- CODE:
R= int(input("R: "))
r= int(input("r: "))
Q= (int(input("Q: ")))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:09:20) 
-- CODE:
R= int(input("R: "))
r= int(input("r: "))
Q= (int(input("Q: ")))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:09:41) 
-- CODE:
R= int(input("R: "))
r= int(input("r: "))
Q= (int(input("Q: ")))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- EXECUTION TIME:
0.142469
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:10:41) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= (int(input("Q:")))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:05) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:11:58) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:12:33) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(*math.pi*)*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
File "XXXX", line 5
    M=2*(*math.pi*)*(R*r*2)*(Q)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:00) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)
print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:13:35) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)
print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:14:25) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.")*(R*r*2)*(Q)
print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:14:43) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.")*(R*r*2)*(Q)
print(M,2)
-- EXECUTION TIME:
0.190582
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:18) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.")*(R*r*2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:29) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.")*(R*r*2)*(Q)

print(round(M,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:15:46) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.")*(R*r*2)*(Q)

print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:43) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(math.pi)*(R*r*2)*(Q)

print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:16:59) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi*(R*r*2)*(Q)

print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:17:25) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*"math.pi"*(R*r*2)*(Q)

print(M,2)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:17:33) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*"math.pi"*(R*r*2)*(Q)

print(M,2)
-- EXECUTION TIME:
0.149252
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:18:16) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*"math.pi"*(R*r*2)*(Q)

print(round(2)
-- EXECUTION TIME:
0.127648
-- ERROR:
  File "/home/codebench/codes/1616/2943/main.py", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:20) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*"math.pi"*(R*r*2)*(Q)

print(round(2)
-- ERROR:
File "XXXX", line 8
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:18:32) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*"math.pi"*(R*r*2)*(Q)

print(round(2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:19:01) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi)"*(R*r*2)*(Q)

print(round(2))
-- EXECUTION TIME:
0.12265
-- ERROR:
  File "/home/codebench/codes/1616/2943/main.py", line 7
    print(round(2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:02) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi)"*(R*r*2)*(Q)

print(round(2))
-- ERROR:
File "XXXX", line 7
    print(round(2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:14) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi)"*(R*r*2)*(Q)

print(round(2))
-- ERROR:
File "XXXX", line 7
    print(round(2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:25) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi)"*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
File "XXXX", line 7
    print(round(2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:19:53) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi)"*(R*r*2)*(Q)

print(round(M,2))
	  
-- ERROR:
File "XXXX", line 7
    print(round(M,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:20:03) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi"*(R*r*2)*(Q)

print(round(2))
	  
-- EXECUTION TIME:
0.145246
-- ERROR:
  File "/home/codebench/codes/1616/2943/main.py", line 5
    M=2*math.pi"*(R*r*2)*(Q)
                           ^
SyntaxError: EOL while scanning string literal

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:10) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi"*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
File "XXXX", line 5
    M=2*math.pi"*(R*r*2)*(Q)
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:20:31) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2(*math.pi)*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:13) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2(*math.pi)*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:27) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(math.pi)*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:21:42) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(round(2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:21:54) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(round(2))
	  
-- EXECUTION TIME:
0.190249
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:14) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(M)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:22:44) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(math.pi)*(R*r*2)*(Q)

print(M)
	  
-- EXECUTION TIME:
0.135862
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:22:46) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(math.pi)*(R*r*2)*(Q)

print(M)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:23:06) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi*(R*r*2)*(Q)

print(M)
	  
-- EXECUTION TIME:
0.200656
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:07) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*math.pi*(R*r*2)*(Q)

print(M)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:23:38) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*(3,14)*(R*r*2)*(Q)

print(M)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:06) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(M)
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:25:28) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(round(M,2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-01 15:28:17) 
-- CODE:
R= int(input("R:"))
r= int(input("r:"))
Q= int(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(round(M,2))
	  
-- EXECUTION TIME:
0.212861
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1616/2943/main.py", line 1, in <module>
    R= int(input())
ValueError: invalid literal for int() with base 10: '8.4'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-01 15:28:41) 
-- CODE:
R= float(input("R:"))
r= float(input("r:"))
Q= float(input("Q:"))

M=2*("math.pi")*(R*r*2)*(Q)

print(round(M,2))
	  
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    M=2*("math.pi")*(R*r*2)*(Q)
TypeError: can't multiply sequence by non-int of type 'float'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
